config.yaml: updated style in nav_links

--- a/config.yaml
+++ b/config.yaml
@@ -22,7 +22,7 @@ params:
         style: link
       - label: About
         url: /about/
-        style: icon
+        style: link
       - label: Contact
         url: /contact/
         style: link
